TRY/y.output
Terminals unused in grammar

   T_SAI
   T_Power


Grammar

    0 $accept: start_karo $end

    1 start_karo: T_NL start_karo
    2           | stmt start_karo
    3           | T_EOF

    4 term: T_String

    5 math_term: T_ID
    6          | T_Real
    7          | T_Integer

    8 stmt: simple_stmt T_NL
    9     | compound_stmt

   10 simple_stmt: base_stmt

   11 base_stmt: delete_stmt
   12          | import_stmt
   13          | assign_stmt
   14          | print_stmt
   15          | printable_stmt

   16 loop_stmt: pass_stmt T_NL
   17          | cobr_stmt T_NL

   18 pass_stmt: T_Pass

   19 delete_stmt: T_Del T_ID

   20 import_stmt: T_Import T_ID
   21            | import_from

   22 import_from: T_From T_ID T_Import T_ID end_import_from

   23 end_import_from: T_Comma T_ID end_import_from
   24                | %empty

   25 cobr_stmt: T_Break
   26          | T_Continue

   27 assign_stmt: T_ID T_EQ printable_stmt

   28 print_stmt: T_Print T_LP printable_stmt T_RP

   29 printable_stmt: arith_stmt
   30               | bool_stmt
   31               | list_stmt

   32 arith_stmt: arith_stmt T_Plus arith_stmt
   33           | arith_stmt T_Minus arith_stmt
   34           | arith_stmt T_Star arith_stmt
   35           | arith_stmt T_Divide arith_stmt
   36           | arith_stmt T_DDiv arith_stmt
   37           | arith_stmt T_Mod arith_stmt
   38           | T_LP arith_stmt T_RP
   39           | math_term

   40 bool_stmt: bool_term T_And bool_term
   41          | bool_term T_Or bool_term
   42          | bool_term
   43          | T_Not bool_stmt
   44          | T_LP bool_stmt T_RP
   45          | arith_stmt comp_op arith_stmt

   46 bool_term: term
   47          | T_True
   48          | T_False

   49 comp_op: T_Lt
   50        | T_Gt
   51        | T_Deq
   52        | T_Lte
   53        | T_Gte

   54 compound_stmt: for_stmt
   55              | while_stmt

   56 for_stmt: T_For T_ID T_In range_stmt T_Cln block_code
   57         | T_For T_ID T_In list_stmt T_Cln block_code

   58 range_stmt: T_Range T_LP math_term T_RP
   59           | T_Range T_LP math_term T_Comma math_term T_RP
   60           | T_Range T_LP math_term T_Comma math_term T_Comma math_term T_RP

   61 list_stmt: T_Ls T_Rs
   62          | T_Ls args T_Rs

   63 args: T_String items
   64     | T_Real items
   65     | T_Integer items
   66     | T_ID

   67 items: T_Comma T_String items
   68      | T_Comma T_Real items
   69      | T_Comma T_Integer items
   70      | T_Comma T_ID items
   71      | %empty

   72 while_stmt: T_While bool_stmt T_Cln block_code

   73 block_code: base_stmt
   74           | T_NL T_IND stmt repeater T_DED
   75           | T_NL T_IND loop_stmt repeater T_DED

   76 repeater: stmt repeater
   77         | loop_stmt repeater
   78         | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NL (258) 1 8 16 17 74 75
T_IND (259) 74 75
T_DED (260) 74 75
T_SAI (261)
T_EOF (262) 3
T_EQ (263) 27
T_Comma (264) 23 59 60 67 68 69 70
T_Del (265) 19
T_Pass (266) 18
T_Break (267) 25
T_Continue (268) 26
T_In (269) 56 57
T_Print (270) 28
T_Import (271) 20 22
T_From (272) 22
T_Star (273) 34
T_LP (274) 28 38 44 58 59 60
T_RP (275) 28 38 44 58 59 60
T_Cln (276) 56 57 72
T_For (277) 56 57
T_While (278) 72
T_Or (279) 41
T_Range (280) 58 59 60
T_And (281) 40
T_Not (282) 43
T_Lt (283) 49
T_Gt (284) 50
T_Lte (285) 52
T_Gte (286) 53
T_Deq (287) 51
T_Plus (288) 32
T_Minus (289) 33
T_Divide (290) 35
T_Mod (291) 37
T_DDiv (292) 36
T_Power (293)
T_Ls (294) 61 62
T_Rs (295) 61 62
T_True (296) 47
T_False (297) 48
T_ID (298) 5 19 20 22 23 27 56 57 66 70
T_Integer (299) 7 65 69
T_Real (300) 6 64 68
T_String (301) 4 63 67


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
start_karo (48)
    on left: 1 2 3, on right: 0 1 2
term (49)
    on left: 4, on right: 46
math_term (50)
    on left: 5 6 7, on right: 39 58 59 60
stmt (51)
    on left: 8 9, on right: 2 74 76
simple_stmt (52)
    on left: 10, on right: 8
base_stmt (53)
    on left: 11 12 13 14 15, on right: 10 73
loop_stmt (54)
    on left: 16 17, on right: 75 77
pass_stmt (55)
    on left: 18, on right: 16
delete_stmt (56)
    on left: 19, on right: 11
import_stmt (57)
    on left: 20 21, on right: 12
import_from (58)
    on left: 22, on right: 21
end_import_from (59)
    on left: 23 24, on right: 22 23
cobr_stmt (60)
    on left: 25 26, on right: 17
assign_stmt (61)
    on left: 27, on right: 13
print_stmt (62)
    on left: 28, on right: 14
printable_stmt (63)
    on left: 29 30 31, on right: 15 27 28
arith_stmt (64)
    on left: 32 33 34 35 36 37 38 39, on right: 29 32 33 34 35 36 37
    38 45
bool_stmt (65)
    on left: 40 41 42 43 44 45, on right: 30 43 44 72
bool_term (66)
    on left: 46 47 48, on right: 40 41 42
comp_op (67)
    on left: 49 50 51 52 53, on right: 45
compound_stmt (68)
    on left: 54 55, on right: 9
for_stmt (69)
    on left: 56 57, on right: 54
range_stmt (70)
    on left: 58 59 60, on right: 56
list_stmt (71)
    on left: 61 62, on right: 31 57
args (72)
    on left: 63 64 65 66, on right: 62
items (73)
    on left: 67 68 69 70 71, on right: 63 64 65 67 68 69 70
while_stmt (74)
    on left: 72, on right: 55
block_code (75)
    on left: 73 74 75, on right: 56 57 72
repeater (76)
    on left: 76 77 78, on right: 74 75 76 77


State 0

    0 $accept: . start_karo $end

    T_NL       shift, and go to state 1
    T_EOF      shift, and go to state 2
    T_Del      shift, and go to state 3
    T_Print    shift, and go to state 4
    T_Import   shift, and go to state 5
    T_From     shift, and go to state 6
    T_LP       shift, and go to state 7
    T_For      shift, and go to state 8
    T_While    shift, and go to state 9
    T_Not      shift, and go to state 10
    T_Ls       shift, and go to state 11
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 14
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    start_karo      go to state 18
    term            go to state 19
    math_term       go to state 20
    stmt            go to state 21
    simple_stmt     go to state 22
    base_stmt       go to state 23
    delete_stmt     go to state 24
    import_stmt     go to state 25
    import_from     go to state 26
    assign_stmt     go to state 27
    print_stmt      go to state 28
    printable_stmt  go to state 29
    arith_stmt      go to state 30
    bool_stmt       go to state 31
    bool_term       go to state 32
    compound_stmt   go to state 33
    for_stmt        go to state 34
    list_stmt       go to state 35
    while_stmt      go to state 36


State 1

    1 start_karo: T_NL . start_karo

    T_NL       shift, and go to state 1
    T_EOF      shift, and go to state 2
    T_Del      shift, and go to state 3
    T_Print    shift, and go to state 4
    T_Import   shift, and go to state 5
    T_From     shift, and go to state 6
    T_LP       shift, and go to state 7
    T_For      shift, and go to state 8
    T_While    shift, and go to state 9
    T_Not      shift, and go to state 10
    T_Ls       shift, and go to state 11
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 14
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    start_karo      go to state 37
    term            go to state 19
    math_term       go to state 20
    stmt            go to state 21
    simple_stmt     go to state 22
    base_stmt       go to state 23
    delete_stmt     go to state 24
    import_stmt     go to state 25
    import_from     go to state 26
    assign_stmt     go to state 27
    print_stmt      go to state 28
    printable_stmt  go to state 29
    arith_stmt      go to state 30
    bool_stmt       go to state 31
    bool_term       go to state 32
    compound_stmt   go to state 33
    for_stmt        go to state 34
    list_stmt       go to state 35
    while_stmt      go to state 36


State 2

    3 start_karo: T_EOF .

    $default  reduce using rule 3 (start_karo)


State 3

   19 delete_stmt: T_Del . T_ID

    T_ID  shift, and go to state 38


State 4

   28 print_stmt: T_Print . T_LP printable_stmt T_RP

    T_LP  shift, and go to state 39


State 5

   20 import_stmt: T_Import . T_ID

    T_ID  shift, and go to state 40


State 6

   22 import_from: T_From . T_ID T_Import T_ID end_import_from

    T_ID  shift, and go to state 41


State 7

   38 arith_stmt: T_LP . arith_stmt T_RP
   44 bool_stmt: T_LP . bool_stmt T_RP

    T_LP       shift, and go to state 7
    T_Not      shift, and go to state 10
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    term        go to state 19
    math_term   go to state 20
    arith_stmt  go to state 43
    bool_stmt   go to state 44
    bool_term   go to state 32


State 8

   56 for_stmt: T_For . T_ID T_In range_stmt T_Cln block_code
   57         | T_For . T_ID T_In list_stmt T_Cln block_code

    T_ID  shift, and go to state 45


State 9

   72 while_stmt: T_While . bool_stmt T_Cln block_code

    T_LP       shift, and go to state 7
    T_Not      shift, and go to state 10
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    term        go to state 19
    math_term   go to state 20
    arith_stmt  go to state 46
    bool_stmt   go to state 47
    bool_term   go to state 32


State 10

   43 bool_stmt: T_Not . bool_stmt

    T_LP       shift, and go to state 7
    T_Not      shift, and go to state 10
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    term        go to state 19
    math_term   go to state 20
    arith_stmt  go to state 46
    bool_stmt   go to state 48
    bool_term   go to state 32


State 11

   61 list_stmt: T_Ls . T_Rs
   62          | T_Ls . args T_Rs

    T_Rs       shift, and go to state 49
    T_ID       shift, and go to state 50
    T_Integer  shift, and go to state 51
    T_Real     shift, and go to state 52
    T_String   shift, and go to state 53

    args  go to state 54


State 12

   47 bool_term: T_True .

    $default  reduce using rule 47 (bool_term)


State 13

   48 bool_term: T_False .

    $default  reduce using rule 48 (bool_term)


State 14

    5 math_term: T_ID .
   27 assign_stmt: T_ID . T_EQ printable_stmt

    T_EQ  shift, and go to state 55

    $default  reduce using rule 5 (math_term)


State 15

    7 math_term: T_Integer .

    $default  reduce using rule 7 (math_term)


State 16

    6 math_term: T_Real .

    $default  reduce using rule 6 (math_term)


State 17

    4 term: T_String .

    $default  reduce using rule 4 (term)


State 18

    0 $accept: start_karo . $end

    $end  shift, and go to state 56


State 19

   46 bool_term: term .

    $default  reduce using rule 46 (bool_term)


State 20

   39 arith_stmt: math_term .

    $default  reduce using rule 39 (arith_stmt)


State 21

    2 start_karo: stmt . start_karo

    T_NL       shift, and go to state 1
    T_EOF      shift, and go to state 2
    T_Del      shift, and go to state 3
    T_Print    shift, and go to state 4
    T_Import   shift, and go to state 5
    T_From     shift, and go to state 6
    T_LP       shift, and go to state 7
    T_For      shift, and go to state 8
    T_While    shift, and go to state 9
    T_Not      shift, and go to state 10
    T_Ls       shift, and go to state 11
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 14
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    start_karo      go to state 57
    term            go to state 19
    math_term       go to state 20
    stmt            go to state 21
    simple_stmt     go to state 22
    base_stmt       go to state 23
    delete_stmt     go to state 24
    import_stmt     go to state 25
    import_from     go to state 26
    assign_stmt     go to state 27
    print_stmt      go to state 28
    printable_stmt  go to state 29
    arith_stmt      go to state 30
    bool_stmt       go to state 31
    bool_term       go to state 32
    compound_stmt   go to state 33
    for_stmt        go to state 34
    list_stmt       go to state 35
    while_stmt      go to state 36


State 22

    8 stmt: simple_stmt . T_NL

    T_NL  shift, and go to state 58


State 23

   10 simple_stmt: base_stmt .

    $default  reduce using rule 10 (simple_stmt)


State 24

   11 base_stmt: delete_stmt .

    $default  reduce using rule 11 (base_stmt)


State 25

   12 base_stmt: import_stmt .

    $default  reduce using rule 12 (base_stmt)


State 26

   21 import_stmt: import_from .

    $default  reduce using rule 21 (import_stmt)


State 27

   13 base_stmt: assign_stmt .

    $default  reduce using rule 13 (base_stmt)


State 28

   14 base_stmt: print_stmt .

    $default  reduce using rule 14 (base_stmt)


State 29

   15 base_stmt: printable_stmt .

    $default  reduce using rule 15 (base_stmt)


State 30

   29 printable_stmt: arith_stmt .
   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   45 bool_stmt: arith_stmt . comp_op arith_stmt

    T_Star    shift, and go to state 59
    T_Lt      shift, and go to state 60
    T_Gt      shift, and go to state 61
    T_Lte     shift, and go to state 62
    T_Gte     shift, and go to state 63
    T_Deq     shift, and go to state 64
    T_Plus    shift, and go to state 65
    T_Minus   shift, and go to state 66
    T_Divide  shift, and go to state 67
    T_Mod     shift, and go to state 68
    T_DDiv    shift, and go to state 69

    $default  reduce using rule 29 (printable_stmt)

    comp_op  go to state 70


State 31

   30 printable_stmt: bool_stmt .

    $default  reduce using rule 30 (printable_stmt)


State 32

   40 bool_stmt: bool_term . T_And bool_term
   41          | bool_term . T_Or bool_term
   42          | bool_term .

    T_Or   shift, and go to state 71
    T_And  shift, and go to state 72

    $default  reduce using rule 42 (bool_stmt)


State 33

    9 stmt: compound_stmt .

    $default  reduce using rule 9 (stmt)


State 34

   54 compound_stmt: for_stmt .

    $default  reduce using rule 54 (compound_stmt)


State 35

   31 printable_stmt: list_stmt .

    $default  reduce using rule 31 (printable_stmt)


State 36

   55 compound_stmt: while_stmt .

    $default  reduce using rule 55 (compound_stmt)


State 37

    1 start_karo: T_NL start_karo .

    $default  reduce using rule 1 (start_karo)


State 38

   19 delete_stmt: T_Del T_ID .

    $default  reduce using rule 19 (delete_stmt)


State 39

   28 print_stmt: T_Print T_LP . printable_stmt T_RP

    T_LP       shift, and go to state 7
    T_Not      shift, and go to state 10
    T_Ls       shift, and go to state 11
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    term            go to state 19
    math_term       go to state 20
    printable_stmt  go to state 73
    arith_stmt      go to state 30
    bool_stmt       go to state 31
    bool_term       go to state 32
    list_stmt       go to state 35


State 40

   20 import_stmt: T_Import T_ID .

    $default  reduce using rule 20 (import_stmt)


State 41

   22 import_from: T_From T_ID . T_Import T_ID end_import_from

    T_Import  shift, and go to state 74


State 42

    5 math_term: T_ID .

    $default  reduce using rule 5 (math_term)


State 43

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   38           | T_LP arith_stmt . T_RP
   45 bool_stmt: arith_stmt . comp_op arith_stmt

    T_Star    shift, and go to state 59
    T_RP      shift, and go to state 75
    T_Lt      shift, and go to state 60
    T_Gt      shift, and go to state 61
    T_Lte     shift, and go to state 62
    T_Gte     shift, and go to state 63
    T_Deq     shift, and go to state 64
    T_Plus    shift, and go to state 65
    T_Minus   shift, and go to state 66
    T_Divide  shift, and go to state 67
    T_Mod     shift, and go to state 68
    T_DDiv    shift, and go to state 69

    comp_op  go to state 70


State 44

   44 bool_stmt: T_LP bool_stmt . T_RP

    T_RP  shift, and go to state 76


State 45

   56 for_stmt: T_For T_ID . T_In range_stmt T_Cln block_code
   57         | T_For T_ID . T_In list_stmt T_Cln block_code

    T_In  shift, and go to state 77


State 46

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   45 bool_stmt: arith_stmt . comp_op arith_stmt

    T_Star    shift, and go to state 59
    T_Lt      shift, and go to state 60
    T_Gt      shift, and go to state 61
    T_Lte     shift, and go to state 62
    T_Gte     shift, and go to state 63
    T_Deq     shift, and go to state 64
    T_Plus    shift, and go to state 65
    T_Minus   shift, and go to state 66
    T_Divide  shift, and go to state 67
    T_Mod     shift, and go to state 68
    T_DDiv    shift, and go to state 69

    comp_op  go to state 70


State 47

   72 while_stmt: T_While bool_stmt . T_Cln block_code

    T_Cln  shift, and go to state 78


State 48

   43 bool_stmt: T_Not bool_stmt .

    $default  reduce using rule 43 (bool_stmt)


State 49

   61 list_stmt: T_Ls T_Rs .

    $default  reduce using rule 61 (list_stmt)


State 50

   66 args: T_ID .

    $default  reduce using rule 66 (args)


State 51

   65 args: T_Integer . items

    T_Comma  shift, and go to state 79

    $default  reduce using rule 71 (items)

    items  go to state 80


State 52

   64 args: T_Real . items

    T_Comma  shift, and go to state 79

    $default  reduce using rule 71 (items)

    items  go to state 81


State 53

   63 args: T_String . items

    T_Comma  shift, and go to state 79

    $default  reduce using rule 71 (items)

    items  go to state 82


State 54

   62 list_stmt: T_Ls args . T_Rs

    T_Rs  shift, and go to state 83


State 55

   27 assign_stmt: T_ID T_EQ . printable_stmt

    T_LP       shift, and go to state 7
    T_Not      shift, and go to state 10
    T_Ls       shift, and go to state 11
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    term            go to state 19
    math_term       go to state 20
    printable_stmt  go to state 84
    arith_stmt      go to state 30
    bool_stmt       go to state 31
    bool_term       go to state 32
    list_stmt       go to state 35


State 56

    0 $accept: start_karo $end .

    $default  accept


State 57

    2 start_karo: stmt start_karo .

    $default  reduce using rule 2 (start_karo)


State 58

    8 stmt: simple_stmt T_NL .

    $default  reduce using rule 8 (stmt)


State 59

   34 arith_stmt: arith_stmt T_Star . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 86


State 60

   49 comp_op: T_Lt .

    $default  reduce using rule 49 (comp_op)


State 61

   50 comp_op: T_Gt .

    $default  reduce using rule 50 (comp_op)


State 62

   52 comp_op: T_Lte .

    $default  reduce using rule 52 (comp_op)


State 63

   53 comp_op: T_Gte .

    $default  reduce using rule 53 (comp_op)


State 64

   51 comp_op: T_Deq .

    $default  reduce using rule 51 (comp_op)


State 65

   32 arith_stmt: arith_stmt T_Plus . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 87


State 66

   33 arith_stmt: arith_stmt T_Minus . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 88


State 67

   35 arith_stmt: arith_stmt T_Divide . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 89


State 68

   37 arith_stmt: arith_stmt T_Mod . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 90


State 69

   36 arith_stmt: arith_stmt T_DDiv . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 91


State 70

   45 bool_stmt: arith_stmt comp_op . arith_stmt

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 92


State 71

   41 bool_stmt: bool_term T_Or . bool_term

    T_True    shift, and go to state 12
    T_False   shift, and go to state 13
    T_String  shift, and go to state 17

    term       go to state 19
    bool_term  go to state 93


State 72

   40 bool_stmt: bool_term T_And . bool_term

    T_True    shift, and go to state 12
    T_False   shift, and go to state 13
    T_String  shift, and go to state 17

    term       go to state 19
    bool_term  go to state 94


State 73

   28 print_stmt: T_Print T_LP printable_stmt . T_RP

    T_RP  shift, and go to state 95


State 74

   22 import_from: T_From T_ID T_Import . T_ID end_import_from

    T_ID  shift, and go to state 96


State 75

   38 arith_stmt: T_LP arith_stmt T_RP .

    $default  reduce using rule 38 (arith_stmt)


State 76

   44 bool_stmt: T_LP bool_stmt T_RP .

    $default  reduce using rule 44 (bool_stmt)


State 77

   56 for_stmt: T_For T_ID T_In . range_stmt T_Cln block_code
   57         | T_For T_ID T_In . list_stmt T_Cln block_code

    T_Range  shift, and go to state 97
    T_Ls     shift, and go to state 11

    range_stmt  go to state 98
    list_stmt   go to state 99


State 78

   72 while_stmt: T_While bool_stmt T_Cln . block_code

    T_NL       shift, and go to state 100
    T_Del      shift, and go to state 3
    T_Print    shift, and go to state 4
    T_Import   shift, and go to state 5
    T_From     shift, and go to state 6
    T_LP       shift, and go to state 7
    T_Not      shift, and go to state 10
    T_Ls       shift, and go to state 11
    T_True     shift, and go to state 12
    T_False    shift, and go to state 13
    T_ID       shift, and go to state 14
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16
    T_String   shift, and go to state 17

    term            go to state 19
    math_term       go to state 20
    base_stmt       go to state 101
    delete_stmt     go to state 24
    import_stmt     go to state 25
    import_from     go to state 26
    assign_stmt     go to state 27
    print_stmt      go to state 28
    printable_stmt  go to state 29
    arith_stmt      go to state 30
    bool_stmt       go to state 31
    bool_term       go to state 32
    list_stmt       go to state 35
    block_code      go to state 102


State 79

   67 items: T_Comma . T_String items
   68      | T_Comma . T_Real items
   69      | T_Comma . T_Integer items
   70      | T_Comma . T_ID items

    T_ID       shift, and go to state 103
    T_Integer  shift, and go to state 104
    T_Real     shift, and go to state 105
    T_String   shift, and go to state 106


State 80

   65 args: T_Integer items .

    $default  reduce using rule 65 (args)


State 81

   64 args: T_Real items .

    $default  reduce using rule 64 (args)


State 82

   63 args: T_String items .

    $default  reduce using rule 63 (args)


State 83

   62 list_stmt: T_Ls args T_Rs .

    $default  reduce using rule 62 (list_stmt)


State 84

   27 assign_stmt: T_ID T_EQ printable_stmt .

    $default  reduce using rule 27 (assign_stmt)


State 85

   38 arith_stmt: T_LP . arith_stmt T_RP

    T_LP       shift, and go to state 85
    T_ID       shift, and go to state 42
    T_Integer  shift, and go to state 15
    T_Real     shift, and go to state 16

    math_term   go to state 20
    arith_stmt  go to state 107


State 86

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   34           | arith_stmt T_Star arith_stmt .
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    $default  reduce using rule 34 (arith_stmt)


State 87

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   32           | arith_stmt T_Plus arith_stmt .
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    T_Star    shift, and go to state 59
    T_Divide  shift, and go to state 67
    T_Mod     shift, and go to state 68
    T_DDiv    shift, and go to state 69

    $default  reduce using rule 32 (arith_stmt)


State 88

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   33           | arith_stmt T_Minus arith_stmt .
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    T_Star    shift, and go to state 59
    T_Divide  shift, and go to state 67
    T_Mod     shift, and go to state 68
    T_DDiv    shift, and go to state 69

    $default  reduce using rule 33 (arith_stmt)


State 89

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   35           | arith_stmt T_Divide arith_stmt .
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    $default  reduce using rule 35 (arith_stmt)


State 90

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   37           | arith_stmt T_Mod arith_stmt .

    $default  reduce using rule 37 (arith_stmt)


State 91

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   36           | arith_stmt T_DDiv arith_stmt .
   37           | arith_stmt . T_Mod arith_stmt

    $default  reduce using rule 36 (arith_stmt)


State 92
